crates/oxc_angular_compiler/tests/snapshots/integration_test__for_track_complex_binary_with_nullish_coalescing.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function _forTrack0($index,$item) {
  return ((($item.queryPrefix ?? this.queryPrefix()) + ".") + $item.key);
}
function TestComponent_For_1_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"span");
    i0.ɵɵtext(2);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
  if ((rf & 2)) {
    const tag_r1 = ctx.$implicit;
    i0.ɵɵadvance(2);
    i0.ɵɵtextInterpolate(tag_r1.key);
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵrepeaterCreate(0,TestComponent_For_1_Template,4,1,null,null,_forTrack0,
      true); }
  if ((rf & 2)) { i0.ɵɵrepeater(ctx.visibleTags()); }
}
