crates/oxc_angular_compiler/tests/snapshots/integration_test__for_two_way_binding_with_index.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_For_1_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"input",0);
    i0.ɵɵcontrolCreate();
    i0.ɵɵtwoWayListener("ngModelChange",function TestComponent_For_1_Template_input_ngModelChange_1_listener($event) {
      const $index_r2 = i0.ɵɵrestoreView(_r1).$index;
      const ctx_r2 = i0.ɵɵnextContext();
      (i0.ɵɵtwoWayBindingSet(ctx_r2.items[$index_r2].value,$event) || (ctx_r2.items[$index_r2].value = $event));
      return i0.ɵɵresetView($event);
    });
    i0.ɵɵelementEnd();
    i0.ɵɵtext(2," ");
  }
  if ((rf & 2)) {
    const $index_r2 = ctx.$index;
    const ctx_r2 = i0.ɵɵnextContext();
    i0.ɵɵadvance();
    i0.ɵɵtwoWayProperty("ngModel",ctx_r2.items[$index_r2].value);
    i0.ɵɵcontrol();
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵrepeaterCreate(0,TestComponent_For_1_Template,3,1,null,null,i0.ɵɵrepeaterTrackByIndex); }
  if ((rf & 2)) { i0.ɵɵrepeater(ctx.items); }
}
