crates/oxc_angular_compiler/tests/snapshots/integration_test__i18n_nested_icu_with_interpolations_inside_elements.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"span");
    i0.ɵɵi18n(1,0);
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) {
    i0.ɵɵadvance();
    i0.ɵɵi18nExp(ctx.nestedCount)(ctx.count)(ctx.name)(ctx.category)(ctx.extra)(ctx.count);
    i0.ɵɵi18nApply(1);
  }
}
